Fix map sizing on iOS 15

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -217,10 +217,9 @@ mat-panel-title {
   }
 
   .container {
-    height: 100%;
     height: calc(
       $dvh100 - env(safe-area-inset-bottom, 20px) - env(safe-area-inset-top, 20px)
-    );
+    ) !important;
     overflow: hidden;
   }
 
